src/objects/Account.object
<CustomObject>
    <sharingModel>Private</sharingModel>
    <fields>
        <fullName>ABM_Target_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Req #1388. Required for Marketo Sync</description>
        <label>ABM Target Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ALCR_Created_By__c</fullName>
        <description>Legal Entity Field Req #625</description>
        <encryptionScheme>None</encryptionScheme>
        <label>ALCR Created By</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALCR_Created_Date__c</fullName>
        <description>Legal Entity Field Req #625</description>
        <encryptionScheme>None</encryptionScheme>
        <label>ALCR Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ALCR_Record_Type__c</fullName>
        <label>ALCR Record Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alliance</fullName>
                </value>
                <value>
                    <fullName>Channel Partner / Integrator</fullName>
                </value>
                <value>
                    <fullName>Direct</fullName>
                </value>
                <value>
                    <fullName>DIRECT CUSTOMER</fullName>
                </value>
                <value>
                    <fullName>Direct Reseller Partner</fullName>
                </value>
                <value>
                    <fullName>Distributor</fullName>
                </value>
                <value>
                    <fullName>End Customer</fullName>
                </value>
                <value>
                    <fullName>Indirect Reseller Partner</fullName>
                </value>
                <value>
                    <fullName>Project Specific / Industry Partner</fullName>
                </value>
                <value>
                    <fullName>Service Provider Partner</fullName>
                </value>
                <value>
                    <fullName>Vendor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ALU_Unit_Code__c</fullName>
        <description>Legal Entity Field Req #625</description>
        <encryptionScheme>None</encryptionScheme>
        <label>ALU Unit Code</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Acc_No__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Account number-field as a copy of the AccountNumber-field to be used as external identifier in the integrations of related systems looking up account data in Salesforce. Projects involved: Case Handling and Support Portal.
Initially 2017 only used for data migration upsert capability.</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Acc No</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>AccountLifecycleStatus__c</fullName>
        <label>Account Life Cycle Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Lead</fullName>
                </value>
                <value>
                    <fullName>Opportunity</fullName>
                </value>
                <value>
                    <fullName>Offer</fullName>
                </value>
                <value>
                    <fullName>Contracted</fullName>
                </value>
                <value>
                    <fullName>In Ramp Down</fullName>
                </value>
                <value>
                    <fullName>Ramp Down Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AccountNameAdditionalInfo__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Name Additional Info</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountNameNetName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Name Net Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountStatusInCRMOM__c</fullName>
        <label>Account Status In CRMOM</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Document_Collaboration__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Document Collaboration</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Activity_Sector_Code__c</fullName>
        <description>Legal Entity Field Req #625</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Activity Sector Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activity_Sector_Name__c</fullName>
        <description>Legal Entity Field Req #625</description>
        <label>Activity Sector Name</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Market_Segment__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>ALTERNATE SERVICE PROVIDERS</fullName>
                </value>
                <value>
                    <fullName>CABL - CABLE OPERATORS</fullName>
                </value>
                <value>
                    <fullName>CARRIER NEUTRAL SERVICE PROVIDERS</fullName>
                </value>
                <value>
                    <fullName>DEACTIVATED/INACTIVE ACCOUNTS</fullName>
                </value>
                <value>
                    <fullName>DEACTIVATED CUSTOMER</fullName>
                </value>
                <value>
                    <fullName>END CUSTOMERS</fullName>
                </value>
                <value>
                    <fullName>ENR - MINING</fullName>
                </value>
                <value>
                    <fullName>ENR - OIL &amp; GAS</fullName>
                </value>
                <value>
                    <fullName>ENR - UTELCO</fullName>
                </value>
                <value>
                    <fullName>ENR - UTILITIES</fullName>
                </value>
                <value>
                    <fullName>FIXED MOBILE CONVERGENCE</fullName>
                </value>
                <value>
                    <fullName>FIXED SERVICE PROVIDERS</fullName>
                </value>
                <value>
                    <fullName>GC - DEFENSE</fullName>
                </value>
                <value>
                    <fullName>GC - EDUCATION</fullName>
                </value>
                <value>
                    <fullName>GC - GDBI</fullName>
                </value>
                <value>
                    <fullName>GC - HEALTHCARE</fullName>
                </value>
                <value>
                    <fullName>GC - SAFETY</fullName>
                </value>
                <value>
                    <fullName>GC - SMART CITIES</fullName>
                </value>
                <value>
                    <fullName>GC - SMART GOVERNMENT</fullName>
                </value>
                <value>
                    <fullName>INTERNAL CUSTOMER</fullName>
                </value>
                <value>
                    <fullName>INTERNAL CUSTOMERS (NOKIA, ALCATEL-LUCENT)</fullName>
                </value>
                <value>
                    <fullName>MANU - AGRICULTURE</fullName>
                </value>
                <value>
                    <fullName>MANU - AUTOMOTIVE</fullName>
                </value>
                <value>
                    <fullName>MANU - DISCRETE</fullName>
                </value>
                <value>
                    <fullName>MANU - OTHERS</fullName>
                </value>
                <value>
                    <fullName>MANU - PROCESS INDUSTRY</fullName>
                </value>
                <value>
                    <fullName>MOBILE SERVICE PROVIDERS</fullName>
                </value>
                <value>
                    <fullName>NON CX</fullName>
                </value>
                <value>
                    <fullName>OTEN - BROADCAST AND MEDIA</fullName>
                </value>
                <value>
                    <fullName>OTEN - FINANCIAL SERVICES, BANKS, INSURANCE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BillingContactFilterCriteria__c</fullName>
        <description>Filter criteria to select billing contacts for the account or the comma separated list of email Ids to send billing statements.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Filter criteria to select billing contacts for the account or the comma separated list of email Ids to send billing statements.</inlineHelpText>
        <label>Billing Contact Filter Criteria</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BillingContactFormat__c</fullName>
        <description>Specifies Billing Contact setup format for a given account.</description>
        <inlineHelpText>Specifies Billing Contact setup format for a given account.</inlineHelpText>
        <label>Billing Contact Format</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Comma Separated Values</fullName>
                </value>
                <value>
                    <fullName>Filter Criteria</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BillingDayOfMonth__c</fullName>
        <description>The billing day of month for the account. Specific Day of Month, End of Month, etc</description>
        <inlineHelpText>The billing day of month for the account. Specific Day of Month, End of Month, etc</inlineHelpText>
        <label>Billing Day Of Month</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1st of the Month</fullName>
                    <default>true</default>
                    <label>1st of the Month</label>
                </value>
                <value>
                    <fullName>2nd of the Month</fullName>
                </value>
                <value>
                    <fullName>3rd of the Month</fullName>
                </value>
                <value>
                    <fullName>4th of the Month</fullName>
                </value>
                <value>
                    <fullName>5th of the Month</fullName>
                </value>
                <value>
                    <fullName>6th of the Month</fullName>
                </value>
                <value>
                    <fullName>7th of the Month</fullName>
                </value>
                <value>
                    <fullName>8th of the Month</fullName>
                </value>
                <value>
                    <fullName>9th of the Month</fullName>
                </value>
                <value>
                    <fullName>10th of the Month</fullName>
                </value>
                <value>
                    <fullName>11th of the Month</fullName>
                </value>
                <value>
                    <fullName>12th of the Month</fullName>
                </value>
                <value>
                    <fullName>13th of the Month</fullName>
                </value>
                <value>
                    <fullName>14th of the Month</fullName>
                </value>
                <value>
                    <fullName>15th of the Month</fullName>
                </value>
                <value>
                    <fullName>16th of the Month</fullName>
                </value>
                <value>
                    <fullName>17th of the Month</fullName>
                </value>
                <value>
                    <fullName>18th of the Month</fullName>
                </value>
                <value>
                    <fullName>19th of the Month</fullName>
                </value>
                <value>
                    <fullName>20th of the Month</fullName>
                </value>
                <value>
                    <fullName>21st of the Month</fullName>
                </value>
                <value>
                    <fullName>22nd of the Month</fullName>
                </value>
                <value>
                    <fullName>23rd of the Month</fullName>
                </value>
                <value>
                    <fullName>24th of the Month</fullName>
                </value>
                <value>
                    <fullName>25th of the Month</fullName>
                </value>
                <value>
                    <fullName>26th of the Month</fullName>
                </value>
                <value>
                    <fullName>27th of the Month</fullName>
                </value>
                <value>
                    <fullName>28th of the Month</fullName>
                </value>
                <value>
                    <fullName>29th of the Month</fullName>
                </value>
                <value>
                    <fullName>30th of the Month</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BillingPreferenceId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated billing preference</description>
        <inlineHelpText>ID of the associated billing preference</inlineHelpText>
        <label>Billing Preference</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Apttus_Config2__BillingPreference__c.Apttus_Config2__Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <infoMessage>Please select a billing preference</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Apttus_Config2__BillingPreference__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__CalendarCycleStart__c</fullName>
        <description>Indicates which calendar month the billing cycle will align to for a given account.</description>
        <inlineHelpText>Indicates which calendar month the billing cycle will align to for a given account.</inlineHelpText>
        <label>Calendar Cycle Start</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>January</fullName>
                </value>
                <value>
                    <fullName>February</fullName>
                </value>
                <value>
                    <fullName>March</fullName>
                </value>
                <value>
                    <fullName>April</fullName>
                </value>
                <value>
                    <fullName>May</fullName>
                </value>
                <value>
                    <fullName>June</fullName>
                </value>
                <value>
                    <fullName>July</fullName>
                </value>
                <value>
                    <fullName>August</fullName>
                </value>
                <value>
                    <fullName>September</fullName>
                </value>
                <value>
                    <fullName>October</fullName>
                </value>
                <value>
                    <fullName>November</fullName>
                </value>
                <value>
                    <fullName>December</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__CertificateId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated tax certificate. Applicable only when tax exempt.</description>
        <inlineHelpText>ID of the associated tax certificate. Applicable only when tax exempt.</inlineHelpText>
        <label>Tax Certificate</label>
        <referenceTo>Apttus_Config2__TaxCertificate__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__CreditMemoEmailTemplate__c</fullName>
        <description>Specifies the current selected Credit Memo Email Template of an account.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Specifies the current selected Credit Memo Email Template of an account.</inlineHelpText>
        <label>Credit Memo Email Template</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__DefaultCreditMemoTemplate__c</fullName>
        <description>The name of the default Credit Memo template for generating Credit Memo documents</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The name of the default Credit Memo template for generating Credit Memo documents</inlineHelpText>
        <label>Default Credit Memo Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__DefaultInvoiceStatementTemplate__c</fullName>
        <description>The name of the default template for generating invoice statements</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The name of the default template for generating invoice statements</inlineHelpText>
        <label>Default Invoice Statement Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__DefaultInvoiceTemplate__c</fullName>
        <description>The name of the default invoice template for generating invoices</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The name of the default invoice template for generating invoices</inlineHelpText>
        <label>Default Invoice Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__InvoiceEmailTemplate__c</fullName>
        <description>Specifies the current selected Invoice Email Template for a given account.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Specifies the current selected Invoice Email Template for a given account.</inlineHelpText>
        <label>Invoice Email Template</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__PaymentTermId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the default payment term associated with the account</description>
        <inlineHelpText>ID of the default payment term associated with the account</inlineHelpText>
        <label>Payment Term</label>
        <referenceTo>Apttus_Config2__PaymentTerm__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__TaxExemptStatus__c</fullName>
        <description>The tax exempt status. Applicable only when tax exempt.</description>
        <inlineHelpText>The tax exempt status. Applicable only when tax exempt.</inlineHelpText>
        <label>Tax Exempt Status</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Apttus_Config2__TaxExempt__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__TaxExempt__c</fullName>
        <description>The tax exempt indicator for the account</description>
        <inlineHelpText>The tax exempt indicator for the account</inlineHelpText>
        <label>Tax Exempt ?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Asset_Quality_Rating_Code__c</fullName>
        <description>Legal Entity Field Req #625</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Asset Quality Rating Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asset_Quality_Rating_Name__c</fullName>
        <description>Legal Entity Field Req #625</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Asset Quality Rating Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Blue_Planet_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Blue Planet ID</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Building_Floor__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Building/Floor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BusinessPartnerRole__c</fullName>
        <description>Req3246 - changing field type to picklist</description>
        <inlineHelpText>If you select End Customer as value during the account prospect request, this indicates that you are requesting an End Customer Legal Entity.</inlineHelpText>
        <label>Business Partner Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alliance</fullName>
                </value>
                <value>
                    <fullName>Direct Customer</fullName>
                </value>
                <value>
                    <fullName>Direct Reseller Partner</fullName>
                </value>
                <value>
                    <fullName>Distributor</fullName>
                </value>
                <value>
                    <fullName>End Customer</fullName>
                </value>
                <value>
                    <fullName>Indirect Reseller Partner</fullName>
                </value>
                <value>
                    <fullName>Industrial Partner</fullName>
                </value>
                <value>
                    <fullName>Project Specific</fullName>
                </value>
                <value>
                    <fullName>Service Provider Partner</fullName>
                </value>
                <value>
                    <fullName>SW Integrator</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Continuation__c</fullName>
        <description>Legal Entity Field Req #625</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Business Continuation</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Name__c</fullName>
        <description>Legal Entity Field Req #625</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Business Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Type__c</fullName>
        <label>Business Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Industry</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Consultant</fullName>
                </value>
                <value>
                    <fullName>Energy</fullName>
                </value>
                <value>
                    <fullName>Enterprise</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Public Sector</fullName>
                </value>
                <value>
                    <fullName>Service Provider</fullName>
                </value>
                <value>
                    <fullName>Transportation</fullName>
                </value>
                <value>
                    <fullName>Cable Operator</fullName>
                </value>
                <value>
                    <fullName>Large Enterprise</fullName>
                    <isActive>false</isActive>
                    <label>Large Enterprise</label>
                </value>
                <value>
                    <fullName>Small / Medium Enterprise</fullName>
                    <isActive>false</isActive>
                    <label>Small / Medium Enterprise</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CBT_CT_Code__c</fullName>
        <description>Legal Entity Field Req #625</description>
        <label>CBT CT Code</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Market__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>700580</fullName>
                    <label>APJ ENT ASEAN CT Bangladesh</label>
                </value>
                <value>
                    <fullName>700172</fullName>
                    <label>APJ ENT ASEAN CT Indonesia</label>
                </value>
                <value>
                    <fullName>700521</fullName>
                    <label>APJ ENT ASEAN CT Malaysia &amp; Sri Lanka</label>
                </value>
                <value>
                    <fullName>700581</fullName>
                    <label>APJ ENT ASEAN CT Myanmar</label>
                </value>
                <value>
                    <fullName>700578</fullName>
                    <label>APJ ENT ASEAN CT Philippines</label>
                </value>
                <value>
                    <fullName>700524</fullName>
                    <label>APJ ENT ASEAN CT Singapore</label>
                </value>
                <value>
                    <fullName>700546</fullName>
                    <label>APJ ENT ASEAN CT Thailand</label>
                </value>
                <value>
                    <fullName>700579</fullName>
                    <label>APJ ENT ASEAN CT Vietnam</label>
                </value>
                <value>
                    <fullName>700553</fullName>
                    <label>APJ ENT CT Japan</label>
                </value>
                <value>
                    <fullName>700548</fullName>
                    <label>APJ ENT CT Korea</label>
                </value>
                <value>
                    <fullName>70097</fullName>
                    <label>APJ ENT CT Oceania</label>
                </value>
                <value>
                    <fullName>700323</fullName>
                    <label>APJ IDS CT BD Indonesia</label>
                </value>
                <value>
                    <fullName>700320</fullName>
                    <label>APJ IDS CT H3I &amp; TIN</label>
                </value>
                <value>
                    <fullName>700321</fullName>
                    <label>APJ IDS CT Indosat</label>
                </value>
                <value>
                    <fullName>70092</fullName>
                    <label>APJ IDS CT Telkom Group</label>
                </value>
                <value>
                    <fullName>700348</fullName>
                    <label>APJ JPN CT KDDI</label>
                </value>
                <value>
                    <fullName>700347</fullName>
                    <label>APJ JPN CT NTT</label>
                </value>
                <value>
                    <fullName>700815</fullName>
                    <label>APJ JPN CT Rakuten</label>
                </value>
                <value>
                    <fullName>700346</fullName>
                    <label>APJ JPN CT Softbank</label>
                </value>
                <value>
                    <fullName>700319</fullName>
                    <label>APJ KOR CT KT</label>
                </value>
                <value>
                    <fullName>700318</fullName>
                    <label>APJ KOR CT LG Uplus</label>
                </value>
                <value>
                    <fullName>700317</fullName>
                    <label>APJ KOR CT SK</label>
                </value>
                <value>
                    <fullName>700199</fullName>
                    <label>APJ OCE CT BD NZ</label>
                </value>
                <value>
                    <fullName>700531</fullName>
                    <label>APJ OCE CT Chorus NZ</label>
                </value>
                <value>
                    <fullName>700529</fullName>
                    <label>APJ OCE CT NBN AU</label>
                </value>
                <value>
                    <fullName>700326</fullName>
                    <label>APJ OCE CT Optus Singtel AU</label>
                </value>
                <value>
                    <fullName>700532</fullName>
                    <label>APJ OCE CT Pacific Islands</label>
                </value>
                <value>
                    <fullName>700530</fullName>
                    <label>APJ OCE CT Spark NZ</label>
                </value>
                <value>
                    <fullName>700403</fullName>
                    <label>APJ OCE CT Telstra AU</label>
                </value>
                <value>
                    <fullName>700327</fullName>
                    <label>APJ OCE CT TPG Telecom AU</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CH_AccountHasLocation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>NOKIASC-25122: To help validate if Account has a linked Location.</description>
        <label>Account Has Location</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CH_AccountRecordTypeName__c</fullName>
        <description>US 22867: Get the Account Record Type Name to avoid hard coding IDs.</description>
        <formula>RecordType.DeveloperName</formula>
        <label>Account Record Type Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_Account_Name_Alias__c</fullName>
        <description>CH: The account alias field should be populated by account name and historical accounts names divided by semicolon</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Name Alias</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CH_CareContract__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to set true if one or more Service Contracts with Account that matches Account on Account record AND Record Type of &quot;CARE Service Contract&quot;</description>
        <label>Care Contract</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CH_LEL4ID__c</fullName>
        <description>Related to US: 3322 and 13733. This copies the Legal Entity L4 ID from a formula field into a text field so it can be used by a sharing rule.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>DELETE CH LE L4 ID</label>
        <length>42</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_LE_Customer_Compliance__c</fullName>
        <description>US: 3322: Copy of LE Customer Compliance field as a formula field can&apos;t be used in a Sharing Rule. This field will set the sharing rule so that certain accounts can be excluded or included for sharing purposes.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>DELETE CH LE Customer Compliance</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_ParentAccountName__c</fullName>
        <formula>Parent.Name</formula>
        <label>Parent Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_SWS_Survey__c</fullName>
        <label>SWS Survey</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Enabled</fullName>
                    <default>true</default>
                    <label>Enabled</label>
                </value>
                <value>
                    <fullName>Disabled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CH_to_post__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CH to post</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>